--- a/css/css-style.css
+++ b/css/css-style.css
@@ -228,7 +228,7 @@ h6 {
 #hero {
   /* width: 100%; */
   height: 100vh;
-  background: url("../images/img-hero-bg.jpg") top center;
+  background: url("../images/img-hero-bg1.jpeg") top center;
   background-size: cover;
 }
 
